tests/NormalTests/paczka1/fuzzy1/16628880.err
Error in line 1: m73lS2Sbh S666 98,87
Error in line 2: 7QUl S666 37,6
Error in line 3: m73lS2Sbh S666 282,3
Error in line 4: 7QUl A238 87,8
Error in line 19: OxERp S94 4,7
Error in line 40: 8gb2QgNPTPG A238 31,10
